--- a/package.json
+++ b/package.json
@@ -1,5 +1,23 @@
 {
-  "dependencies": {
-    "express": "^5.1.0"
-  }
+	"name": "m1p12mean-backend",
+	"version": "1.0.0",
+	"description": "Backend server with user authentication",
+	"main": "app.js",
+	"scripts": {
+		"start": "node app.js",
+		"dev": "nodemon app.js"
+	},
+	"dependencies": {
+		"express": "^4.18.2",
+		"mongoose": "^8.1.1",
+		"bcryptjs": "^2.4.3",
+		"jsonwebtoken": "^9.0.2",
+		"dotenv": "^16.4.1",
+		"cors": "^2.8.5",
+		"express-validator": "^7.0.1",
+		"cookie-parser": "^1.4.6"
+	},
+	"devDependencies": {
+		"nodemon": "^3.0.3"
+	}
 }
